# simple-bitcoin-rust

./: COPYRIGHT  Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml
frontend/: .env.development  .env.local1  .env.local2  Dockerfile  package-lock.json  package.json
frontend/docker/: Dockerfile
frontend/public/: index.html
frontend/src/: App.tsx  Home.tsx  Navbar.tsx  NavbarAdvance.tsx  NavbarMenu.tsx  NavbarSettings.tsx  ShowMyAddress.tsx  UpdateBlockchain.tsx  index.tsx  useFetcher.tsx  useToast.tsx
src/: blockchain.rs  client.rs  client_core.rs  connection_manager.rs  connection_manager_core.rs  connection_manager_edge.rs  core.rs  key_manager.rs  lib.rs  message.rs  sample_bb.rs  server.rs  server_core.rs  util.rs
src/blockchain/: block.rs  manager.rs  transaction.rs  transaction_pool.rs  util.rs  utxo.rs
src/client/: api.rs  client_core.rs  main.rs
src/server/: main.rs  server_core.rs
