[package]
name = "simple-bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.52"
async-recursion = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.1", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.14"
rand = "0.8.5"
rsa = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
signal-hook = "0.3.13"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1.16.1", features = ["full"] }

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
